--- a/src/app/components/native/footer/footer.component.html
+++ b/src/app/components/native/footer/footer.component.html
@@ -1,17 +1,18 @@
 <footer class="pt-4 my-md-5 pt-md-5 border-top">
   <div class="row">
-  
-    <div class="col-6 col-md">
-      <h5>About</h5>
-      <ul class="list-unstyled text-small">
-        <li><a class="text-muted" routerLink="/about">Team</a></li>
-        <li><a class="text-muted" routerLink="/privacy">Privacy</a></li>
-      </ul>
-    </div>
-    <div class="col-6 col-md">
-      <app-contacts></app-contacts>
+    <div class="col-md-12 col-sm-12 col-12">
+      <div class="row">
+        <div class="col-md-6 col-sm-6 col-4">
+          <h5>About</h5>
+          <ul class="list-unstyled text-small footer-links">
+            <li><a class="text-muted" routerLink="/about">Team</a></li>
+            <li><a class="text-muted" routerLink="/privacy">Privacy</a></li>
+          </ul>
+        </div>
+        <div class="col-md-6 col-sm-6 col-8">
+          <app-contacts></app-contacts>
+        </div>
+      </div>
     </div>
   </div>
-
-
 </footer>
