--- a/src/app/components/contacts/contacts.component.html
+++ b/src/app/components/contacts/contacts.component.html
@@ -1,19 +1,19 @@
 
 <form class="" [formGroup]="myForm" [hidden]="success" (ngSubmit)="submitHanlder()">
-<p *ngIf="!success">Newsletter Sign Up!</p>
-  <div class="form-group form-control-sm">
-    <input class="form-control form-control-sm" formControlName="name" placeholder="Name">
+<h5 *ngIf="!success">Newsletter Sign Up!</h5>
+  <div class="form-group no-left-padding">
+    <input class="form-control" formControlName="name" placeholder="Name">
   </div>
-  <div class="form-group form-control-sm">
-    <input class="form-control form-control-sm" formControlName="email" placeholder="Email">
+  <div class="form-group no-left-padding">
+    <input class="form-control" formControlName="email" placeholder="Email">
   </div>
-  <span *ngIf="email.invalid && email.touched">
+  <div *ngIf="email.invalid && email.touched" class="alert alert-danger">
     Your email does not look right.
-</span>
-  <div class="form-group form-control-sm">
+  </div>
+  <div class="form-group no-left-padding float-right">
     <button type="submit" class="btn btn-primary " [disabled]="myForm.invalid && email.invalid">Submit</button>
   </div>
 </form>
-<div *ngIf="success" class="notification is-success bg-success">
+<div *ngIf="success" class="alert alert-success">
   Yay! Welcome to our group!
 </div>
