--- a/src/app/components/native/misc/about/about.component.css
+++ b/src/app/components/native/misc/about/about.component.css
@@ -1,3 +1,24 @@
 .imgSmall {
-height: 150px
+    /* height: 150px */
+    width: 100%;
+    max-width: 150px;
+}
+
+.about-thumb {
+    padding-left: 0;
+}
+
+.about-thumb img:hover {
+    cursor: pointer;
+}
+
+.about-content {
+    padding-right: 0;
+    text-align: justify;
+}
+
+.join {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
 }
