--- a/src/app/components/native/misc/about/about.component.html
+++ b/src/app/components/native/misc/about/about.component.html
@@ -1,9 +1,11 @@
-<div>
+<div class="container" style="margin-top: 40px;">
   <div class="row">
-    <div class="col-3">
-      <img src="../../../../../assets/andreThumbnail.jpg" routerLink="/" alt="Andre" class="rounded-circle imgSmall">
+    <div class="col-md-3 col-sm-3 col-3 about-thumb">
+      <div>
+        <img src="../../../../../assets/andreThumbnail.jpg" routerLink="/" alt="Andre" class="rounded-circle imgSmall">
+      </div>
     </div>
-    <div class="col-9">
+    <div class="col-md-9 col-sm-9 col-9 about-content">
       <h3>Its just me, Andre</h3>
       <p>
         I love building and creating stuff; and would consider myself as a CREATOR. Some people might refer to it as a
@@ -18,10 +20,10 @@
 
       <div class="row">
         <div class="col-sm">
-          <p>Feel free to join this community! --></p>
+          <p class="join">Feel free to join this community! --></p>
         </div>
         <div class="col-sm">
-          <a class="btn btn-danger" (click)="auth.login()">Join Creatorsmap</a>
+          <button class="btn btn-danger" (click)="auth.login()">Join Creatorsmap</button>
         </div>
       </div>
 
