--- a/src/app/components/user/creatordetail/creatordetail.component.html
+++ b/src/app/components/user/creatordetail/creatordetail.component.html
@@ -1,33 +1,35 @@
-<div *ngIf="creator$ | async as user">
-  <div class="userprofile">
-    <img *ngIf="user.brandingSettings.image.bannerImageUrl != 'http://s.ytimg.com/yts/img/channels/c4/default_banner-vfl7DRgTn.png'" [src]="user.brandingSettings.image.bannerImageUrl" alt="Channel Banner" />
-    <div class="row">
-      <div class="col-5">
+<div *ngIf="creator$ | async as user" class="row">
+  <div class="userprofile col-md-12">
+    <img class="detail-banner" *ngIf="user.brandingSettings.image.bannerImageUrl != 'http://s.ytimg.com/yts/img/channels/c4/default_banner-vfl7DRgTn.png'" [src]="user.brandingSettings.image.bannerImageUrl" alt="Channel Banner" />
+    <div *ngIf="user.brandingSettings.image.bannerImageUrl == 'http://s.ytimg.com/yts/img/channels/c4/default_banner-vfl7DRgTn.png'" style="height: 22px;"></div>
+    <div class="row creator-profile-detail">
+      <div class="col-md-12">
         <div class="row">
-          <div class="col-4">
-              <img class="img-fluid rounded-circle" [src]="user.snippet.thumbnails.default.url" alt="User Image" />
+          <div class="col-md-5 col-sm-12">
+            <div class="row">
+              <div class="col-md-3 col-sm-3 col-3 creator-avatar">
+                <img class="img-fluid rounded-circle" [src]="user.snippet.thumbnails.default.url" alt="User Image" />
+              </div>
+              <div class="col-md-8 col-sm-8 col-8 creator-name">
+                <h3>{{user?.snippet.title}}</h3>
+                <p>{{user?.statistics.subscriberCount}} subscribers</p>
+              </div>
+            </div>
           </div>
-          <div class="col-8">
-              <h3>{{user?.snippet.title}}</h3>
-              <p>{{user?.statistics.subscriberCount}} subscribers</p>
+          <div class="col-md-7 col-sm-12">
+            <p class="creator-description">{{user?.snippet.description}}</p>
           </div>
         </div>
       </div>
-      <div class="col-7">
-        <div>
-          <p>{{user?.snippet.description}}</p>
-        </div>
+      <div class="col-md-12 creator-action">
+          <a class="btn btn-danger youtube-connect" target="_blank" href="https://www.youtube.com/channel/{{user.id}}">YouTube Channel</a>
+          <button *ngIf="(auth.isLoggedIn)" class="btn btn-danger" (click)="openMessagingForm()" >Message</button>
       </div>
     </div>
-    <a  class="btn btn-danger" target="_blank" href="https://www.youtube.com/channel/{{user.id}}">YouTube Channel</a>
-    <button *ngIf="(auth.isLoggedIn)" class="btn btn-danger" (click)="openMessagingForm()" >Message</button>
+    
   </div>
-
   <app-messaging-form *ngIf="showMForm"></app-messaging-form>
-
   <hr>
-
-
   <agm-map [latitude]="lat" [zoom]="6" [longitude]="lng" [styles]="mapStyle" (mapClick)="onMapClick($event)">
     <agm-marker [latitude]="lat" [longitude]="lng" [iconUrl]="'../../../assets/1customMarker.png'">
       <agm-snazzy-info-window [maxWidth]="400" [maxHeight]="400" [closeWhenOthersOpen]="true" [closeOnMapClick]="true"
@@ -41,32 +43,24 @@
       </agm-snazzy-info-window>
     </agm-marker>
   </agm-map>
-
   <hr>
-
-
-  <div class="card-columns">
-    <div *ngFor="let v of videoList">
-      <div class="card">
-        <a href="https://www.youtube.com/watch?v={{v.videoId}}" target="_blank">
-          <img src="{{v.thumbnailUrl}}" class="card-img-top cardImage" alt="...">
-        </a>
-
-        <div class="card-body">
-          <h5 class="card-title title">{{v.title}}</h5>
-         
-
-          <small class="text-muted">
-              <a href="https://www.youtube.com/channel/{{v.channelId}}"  target="_blank">
-                {{v.channelTitle}}
-              </a>
+  <div class="col-md-12">
+    <div class="row">
+      <div *ngFor="let v of videoList" class="col-md-3 col-sm-4 col-6 card-item">
+        <div class="card h-100">
+          <a href="https://www.youtube.com/watch?v={{v.videoId}}" target="_blank">
+            <img src="{{v.thumbnailUrl}}" class="card-img-top" alt="...">
+          </a>
+          <div class="card-body">
+            <h5 class="card-title">{{v.title}}</h5>
+            <small class="card-text">
+                <a href="https://www.youtube.com/channel/{{v.channelId}}"  target="_blank">
+                  {{v.channelTitle}}
+                </a>
             </small>
+          </div>
         </div>
       </div>
     </div>
   </div>
-
-
-
-
 </div>
