--- a/src/app/components/user/creators/creators.component.css
+++ b/src/app/components/user/creators/creators.component.css
@@ -10,13 +10,31 @@ img:hover {
     cursor: pointer;
 }
 
-
 img {
     display: block;
     margin-left: auto;
     margin-right: auto;
 }
 
+.avatar {
+    margin: auto;
+    overflow: hidden;
+    border-radius: 50%;
+}
+
+.avatar img {
+    transform-origin: 50% 65%;
+    transition: transform 3s, filter 2s ease-in-out;
+}
+
+.avatar:hover img {
+    transform: scale(1.3);
+}
+
 .marginTop {
     margin-top: 40px;
+}
+
+.user-name {
+    word-break: break-all;
 }
